--- a/Tyuiu.HaevGS.Sprint4.Task1.V8.Lib/Tyuiu.HaevGS.Sprint4.Task1.V8.Lib.csproj
+++ b/Tyuiu.HaevGS.Sprint4.Task1.V8.Lib/Tyuiu.HaevGS.Sprint4.Task1.V8.Lib.csproj
@@ -1,14 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Tyuiu.HaevGS.Sprint4.Task0.V28.Lib\Tyuiu.HaevGS.Sprint4.Task0.V28.Lib.csproj" />
+    <Reference Include="tyuiu.cources.programming.interfaces">
+      <HintPath>..\Tyuiu.HaevGS.Sprint4.Task1.V8\tyuiu.cources.programming.interfaces.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
